# libwvad

./: CMakeLists.txt  README.md
include/: wvad.h
src/: wvad.c
